@@ -4,10 +4,10 @@ import com.dua3.utility.data.Pair;
 import com.dua3.utility.io.AnsiCode;
 
 import java.util.ArrayDeque;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Deque;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.BiFunction;
@@ -69,7 +69,7 @@ public final class AnsiConverter extends AttributeBasedConverter<String> {
      * @return new converter instance
      */
     public static AnsiConverter create(AnsiConversionOption... options) {
-        return create(Arrays.asList(options));
+        return create(List.of(options));
     }
 
     private AnsiConverter() {
