@@ -111,7 +111,7 @@ public final class RichText
      * @return RichText.valueOf(String.valueOf(obj))
      */
     public static RichText valueOf(Object obj, Style... styles) {
-        return valueOf(String.valueOf(obj), Arrays.asList(styles));
+        return valueOf(String.valueOf(obj), List.of(styles));
     }
 
     /**
@@ -550,7 +550,7 @@ public final class RichText
      * @return RichText containing the joined elements
      */
     public static RichText join(RichText delimiter, RichText... elements) {
-        return join(delimiter, Arrays.asList(elements));
+        return join(delimiter, List.of(elements));
     }
 
     /**
