@@ -6,10 +6,8 @@
 package com.dua3.utility.text;
 
 import com.dua3.utility.data.Pair;
-import com.dua3.utility.text.TextUtil;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -27,7 +25,7 @@ public class TextUtilTest {
     }
 
     @SuppressWarnings("NumericCastThatLosesPrecision")
-    private static final List<Pair<String, byte[]>> byteArrayHexStringTestData = Arrays.asList(
+    private static final List<Pair<String, byte[]>> byteArrayHexStringTestData = List.of(
             Pair.of("00", new byte[] { 0x00 }),
             Pair.of("a0cafe", new byte[] { (byte) 0xa0, (byte) 0xca, (byte) 0xfe }));
 
